--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "googleapis": "^118.0.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
