--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "dotenv": "^16.1.3",
     "history": "^5.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
